--- a/vignettes/Intromi4p.Rmd
+++ b/vignettes/Intromi4p.Rmd
@@ -35,9 +35,9 @@ knitr::opts_chunk$set(
 
 # mi4p: multiple imputation for proteomics
 
-This vignette is an introduciton to the `mi4p` R package (Multiple Imputation for Proteomics), proposed by Marie Chion, Christine Carapito and Frédéric Bertrand. The package is dedicated to dealing with multiple imputation for proteomics.
+This repository contains the R code and package for the _mi4p_ methodology (Multiple Imputation for Proteomics), proposed by Marie Chion, Christine Carapito and Frédéric Bertrand (2021) in *Accounting for multiple imputation-induced variability for differential analysis in mass spectrometry-based label-free quantitative proteomics*, [https://arxiv.org/abs/2108.07086](https://arxiv.org/abs/2108.07086). 
 
-The following material is available on thr Github repository of the package (https://github.com/mariechion/mi4p/).
+The following material is available on the Github repository of the package [https://github.com/mariechion/mi4p/](https://github.com/mariechion/mi4p/).
 
 1. The `Functions` folder contains all the functions used for the workflow.  
 
@@ -52,11 +52,13 @@ This website and these examples were created by M. Chion, C. Carapito and F. Ber
 
 ## Installation
 
-You can install the released version of mi4p from [CRAN](https://CRAN.R-project.org) with:
+<!-- You can install the released version of mi4p from [CRAN](https://CRAN.R-project.org) with:
 
-```{r, eval = FALSE}
+
+```r
 install.packages("mi4p")
 ```
+-->
 
 You can install the development version of mi4p from [github](https://github.com) with:
 
