Update to cope with the scheduled removal of Dapar from Bioconductor 3.15. Changes may be reversed if ever Dapar remains ultimately on Bioconductor.

--- a/vignettes/Intromi4p.Rmd
+++ b/vignettes/Intromi4p.Rmd
@@ -104,7 +104,7 @@ MV1pct.impMLE.VarRubin.Mat <- rubin2.all(data = MV1pct.impMLE, metacond = attr(d
 ```{r, cache=TRUE, eval=LOCAL}
 print(paste("Dataset", 1, "out of",1, Sys.time()))
 MV1pct.impMLE.VarRubin.S2 <- as.numeric(lapply(MV1pct.impMLE.VarRubin.Mat, function(aaa){
-    DesMat = DAPAR::make.design(attr(datasim, "metadata"))
+    DesMat = mi4p::make.design(attr(datasim, "metadata"))
     return(max(diag(aaa)%*%t(DesMat)%*%DesMat))
   }))
 ```
@@ -178,7 +178,7 @@ MV1pct.impMLE.VarRubin.Mat <- lapply(1:length(MV1pct.impMLE), function(index){
 MV1pct.impMLE.VarRubin.S2 <- lapply(1:length(MV1pct.impMLE.VarRubin.Mat), function(id.dataset){
   print(paste("Dataset", id.dataset, "out of",length(MV1pct.impMLE.VarRubin.Mat), Sys.time()))
   as.numeric(lapply(MV1pct.impMLE.VarRubin.Mat[[id.dataset]], function(aaa){
-    DesMat = DAPAR::make.design(metadata)
+    DesMat = mi4p::make.design(metadata)
     return(max(diag(aaa)%*%t(DesMat)%*%DesMat))
   }))
 })
