--- a/README.Rmd
+++ b/README.Rmd
@@ -81,7 +81,7 @@ attr(datasim, "metadata")
 ## AMPUTATION
 ```{r, cache=TRUE}
 MV1pct.NA.data <- MVgen(dataset = datasim[,-1], prop_NA = 0.01)
-MV1pct.NA.data
+MV1pct.NA.data[1:6,]
 ```
 
 ## IMPUTATION
@@ -99,7 +99,7 @@ MV1pct.impMLE.VarRubin.Mat <- rubin2.all(data = MV1pct.impMLE, metacond = attr(d
 ```{r, cache=TRUE}
 print(paste("Dataset", 1, "out of",1, Sys.time()))
 MV1pct.impMLE.VarRubin.S2 <- as.numeric(lapply(MV1pct.impMLE.VarRubin.Mat, function(aaa){
-    DesMat = DAPAR::make.design(attr(datasim, "metadata"))
+    DesMat = mi4p::make.design(attr(datasim, "metadata"))
     return(max(diag(aaa)%*%t(DesMat)%*%DesMat))
   }))
 ```
@@ -109,7 +109,7 @@ MV1pct.impMLE.VarRubin.S2 <- as.numeric(lapply(MV1pct.impMLE.VarRubin.Mat, funct
 MV1pct.impMLE.mi4limma.res <- mi4limma(qData = apply(MV1pct.impMLE,1:2,mean), 
                  sTab = attr(datasim, "metadata"), 
                  VarRubin = sqrt(MV1pct.impMLE.VarRubin.S2))
-MV1pct.impMLE.mi4limma.res
+rapply(MV1pct.impMLE.mi4limma.res,head)
 (simplify2array(MV1pct.impMLE.mi4limma.res)$P_Value.A_vs_B_pval)[1:10]
 
 (simplify2array(MV1pct.impMLE.mi4limma.res)$P_Value.A_vs_B_pval)[11:200]<=0.05
@@ -128,7 +128,7 @@ sum((simplify2array(MV1pct.impMLE.mi4limma.res)$P_Value.A_vs_B_pval)[11:200]<=0.
 
 ```{r, cache=TRUE}
 MV1pct.impMLE.dapar.res <-limmaCompleteTest.mod(qData = apply(MV1pct.impMLE,1:2,mean), sTab = attr(datasim, "metadata"))
-MV1pct.impMLE.dapar.res
+rapply(MV1pct.impMLE.dapar.res,head)
 ```
 
 Simulate a list of 100 datasets.
@@ -178,7 +178,7 @@ MV1pct.impMLE.VarRubin.Mat <- lapply(1:length(MV1pct.impMLE), function(index){
 MV1pct.impMLE.VarRubin.S2 <- lapply(1:length(MV1pct.impMLE.VarRubin.Mat), function(id.dataset){
   print(paste("Dataset", id.dataset, "out of",length(MV1pct.impMLE.VarRubin.Mat), Sys.time()))
   as.numeric(lapply(MV1pct.impMLE.VarRubin.Mat[[id.dataset]], function(aaa){
-    DesMat = DAPAR::make.design(metadata)
+    DesMat = mi4p::make.design(metadata)
     return(max(diag(aaa)%*%t(DesMat)%*%DesMat))
   }))
 })
@@ -195,4 +195,25 @@ MV1pct.impMLE.dapar.res <- foreach(iforeach =  1:100,  .errorhandling = 'stop', 
   limmaCompleteTest.mod(qData = apply(MV1pct.impMLE[[iforeach]],1:2,mean), 
                         sTab = metadata)
 ```
+
+Complimentary useful tests
+
+## TESTING FOR ABSENCE/PRESENCE WITH GTEST
+As in the package follows the analysis described in “A statistical framework for protein quantitation in bottom-up MS based proteomics`` (Karpievitch et al. Bioinformatics 2009).
+```{r}
+library(ProteoMM)
+ProteoMM::g.test(c(TRUE, TRUE, FALSE, FALSE), as.factor(c('grp1', 'grp1', 'grp2', 'grp2')))
+data("qData")
+data("sTab")
+tableNA.qData <- apply(is.na(qData),1,table,sTab$Condition)
+id.mix <- unlist(lapply(tableNA.qData,function(res) nrow(res)>1))
+# apply(is.na(qData[id.mix,]),1,g.test,sTab$Condition)
+res.g.test <- cbind(rownames=as.data.frame(rownames(qData)[id.mix]),
+                    p.val=apply(is.na(qData[id.mix,]),1,
+                                function(tab) return(ProteoMM::g.test(x=tab,y=sTab$Condition)$p.value)))
+res.g.test[res.g.test[,2]<0.05,]
+qData[rownames(res.g.test[res.g.test[,2]<0.05,]),]
+```
+
+
 
