--- a/README.Rmd
+++ b/README.Rmd
@@ -56,8 +56,6 @@ devtools::install_github("mariechion/mi4p")
 
 ## Examples
 
-### First section
-
 ```{r}
 library(mi4p)
 ```
@@ -68,7 +66,7 @@ datasim <- protdatasim()
 str(datasim)
 ```
 
-It s the dataset shipped with package.
+It is the dataset shipped with package.
 ```{r, eval=FALSE}
 save(datasim, file="datasim.RData", compress = "xz")
 ```
@@ -199,7 +197,9 @@ MV1pct.impMLE.dapar.res <- foreach(iforeach =  1:100,  .errorhandling = 'stop', 
 Complimentary useful tests
 
 ## TESTING FOR ABSENCE/PRESENCE WITH GTEST
-As in the package follows the analysis described in “A statistical framework for protein quantitation in bottom-up MS based proteomics`` (Karpievitch et al. Bioinformatics 2009).
+
+The `g.test` function of the`ProteoMM` Bioconductor package, implements the G-Test described in “A statistical framework for protein quantitation in bottom-up MS based proteomics`` (Karpievitch et al. Bioinformatics 2009).
+
 ```{r}
 library(ProteoMM)
 ProteoMM::g.test(c(TRUE, TRUE, FALSE, FALSE), as.factor(c('grp1', 'grp1', 'grp2', 'grp2')))
@@ -215,5 +215,18 @@ res.g.test[res.g.test[,2]<0.05,]
 qData[rownames(res.g.test[res.g.test[,2]<0.05,]),]
 ```
 
-
+The `eigen_pi` function of the `ProteoMM` Bioconductor package computes the proportion of observations missing completely at random. It is used by the `g.test` function if such an estimate is to be computed using the data
+.
+```{r}
+library(ProteoMM)
+data(mm_peptides)
+intsCols = 8:13
+metaCols = 1:7
+m_Ints = mm_peptides[, intsCols]
+m_prot.info = mm_peptides[, metaCols]
+m_logInts = m_Ints
+m_logInts[m_Ints==0] = NA
+m_logInts = log2(m_logInts)
+my.pi = ProteoMM::eigen_pi(m_logInts, toplot=TRUE)
+```
 
